syntax = "proto3";
package nano;

import 'Accounts.proto';
import 'Blocks.proto';
import 'Peers.proto';

service NanoRPC {
  // Accounts
  rpc AccountBalance (AccountRequest) returns (AccountBalanceResponse) {}
  rpc AccountBlockCount (AccountRequest) returns (AccountBlockCountResponse) {}
  rpc AccountInfo (AccountInfoRequest) returns (AccountResponse) {}

  // Blocks
  rpc BlockCount (EmptyRequest) returns (BlockCountResponse) {}

  // Peers
  rpc Peers (EmptyRequest) returns (PeersResponse) {}
}

message EmptyRequest {
}
